# camas

./: .gitignore  .mcp.json  .python-version  CONTRIBUTING.md  MANIFEST.in  README.md  check.py  cspell.json  flake.nix  pyproject.toml  setup.py  tasks.py
.claude-plugin/: marketplace.json
.github/scripts/: ci-setup.sh  demo-payload.sh  record-demo.sh  release.py
.github/workflows/: ci.yaml  claude-code-harness.yaml  claude-code-review-collect.yaml  claude-code-review.yaml  demo.yaml  review.yaml
agent/claude/plugin/: .mcp.json  sync_version.py
agent/claude/plugin/.claude-plugin/: plugin.json
agent/claude/plugin/agents/: camas-fixer.md
agent/claude/plugin/hooks/: hooks.json
demos/archive/: demo-009996e.cast  demo-020908e.cast  demo-0212ace.cast  demo-03d18ed.cast  demo-04d9cae.cast  demo-0586e3a.cast  demo-06a80aa.cast  demo-072c8ca.cast  demo-09f0fca.cast  demo-0a26747.cast  demo-0a68fab.cast  demo-0ca513e.cast  demo-0e2660e.cast  demo-0ebdf74.cast  demo-1217888.cast  demo-12b3148.cast  demo-140f386.cast  demo-17eef78.cast  demo-1a5ca98.cast  demo-1b75269.cast  demo-1d789ac.cast  demo-1f35f07.cast  demo-23ea3ce.cast  demo-240f54b.cast  demo-243095d.cast  demo-24dee41.cast  demo-2503c92.cast  demo-26ce2d7.cast  demo-2afed80.cast  demo-2c60da0.cast  demo-2eeedf2.cast  demo-3245e2a.cast  demo-3277a3a.cast  demo-3499194.cast  demo-35cb154.cast  demo-37505e4.cast  demo-3774cf5.cast  demo-382dd70.cast  demo-38ebeef.cast  demo-410b0f9.cast  (+109 more)
examples/: README.md  effect-plugin  playwright-matrix-override  python-project  python-version-matrix  tauri-app
nix/: argtree.nix  package.nix  resolve-extras.nix
src/camas/: __init__.py  __main__.py  main.py
src/camas/core/: __init__.py  budget.py  color.py  completion.py  effect.py  execution.py  gate.py  hook_event.py  leaf_state.py  matrix.py  render.py  scope.py  task.py  task_event.py  timings.py  traversal.py
src/camas/data/: prelude.dhall
src/camas/effect/: __init__.py  _ctrf_model.py  ctrf.py  github_checks.py  status.py  summary.py  termtree.py  timings.py
src/camas/main/: __init__.py  argv.py  check.py  claude_agent_lint_haiku.md  claude_agent_lint_sonnet.md  claude_agent_test_fixer.md  claude_gate_skill.md  color.py  compose.py  dhall.py  discover.py  dispatch.py  effects.py  entrypoint.py  expression.py  format.py  github_matrix.py  init.py  mypyc.py  parser.py  pep723.py  starter.py  starter_verbose.py  state.py  tasks.py
src/camas/main/compose/: __init__.py  errors.py  rebase.py  scope.py
src/camas/mcp/: __init__.py  catalog.py  cli.py  docs.py  result.py  scaffold.py  serve.py  wire.py
src/camas/v0/: __init__.py  completion.py  config.py  effect.py  leaf_state.py  task.py  task_event.py
tests/: __init__.py  test_config.py  test_config_fixture.py  test_demos.py  test_dhall_fixture.py  test_effect_plugin_fixture.py  test_effect_protocol.py  test_expand_matrix.py  test_flatten_leaves.py  test_main.py  test_monorepo_fixture.py  test_override_matrix.py  test_packaging.py  test_parse_expression.py  test_pep723_fixture.py  test_playwright_matrix_override_fixture.py  test_python_project_fixture.py  test_python_version_matrix_fixture.py  test_release_script.py  test_run.py  test_tauri_fixture.py  test_timing.py  test_truncate_middle.py  test_v0.py  test_variadic_api.py
tests/claude_code/: _probe.py  conftest.py  test_autofix_e2e.py  test_fixer_uses_mcp_tool.py  test_hook_contract.py  test_install_chain.py  test_pep723_plugin_chain.py  test_shipped_autofix_hook.py
tests/core/: test_budget.py  test_effect.py  test_execution.py  test_gate.py  test_leaf_state.py  test_matrix.py  test_override_matrix.py  test_scope.py  test_timing.py  test_timings_cache.py  test_traversal.py  test_variadic_api.py
tests/effect/: test_ctrf.py  test_github_checks.py  test_status.py  test_summary.py  test_termtree.py  test_timings.py  test_truncate_middle.py
tests/fixtures/: github-actions-matrix-schema.json
tests/fixtures/check/both-fail/: tasks.py
tests/fixtures/check/eval-fail/: tasks.py
tests/fixtures/check/inert-paths/: tasks.py
tests/fixtures/check/pass/: tasks.py
tests/fixtures/check/type-fail/: tasks.py
tests/fixtures/config/: tasks.py
tests/fixtures/ctrl-c/: README.md  sigint_app.py  tasks.py
tests/fixtures/dhall-monorepo/: camas.dhall  tasks.dhall
tests/fixtures/dhall-monorepo/libs/: tasks.dhall
tests/fixtures/effect-plugin/: README.md  tail.py  tasks.py
tests/fixtures/monorepo/: tasks.py
tests/fixtures/monorepo-badchild/: tasks.py
tests/fixtures/monorepo-badchild/broken/: tasks.py
tests/fixtures/monorepo-collision/: tasks.py
tests/fixtures/monorepo-collision/search/: tasks.py
tests/fixtures/monorepo/legacy/: tasks.py
tests/fixtures/monorepo/libs/: tasks.py
tests/fixtures/monorepo/tools/: tasks.py
tests/fixtures/monorepo/web/: tasks.py
tests/fixtures/pep723/: tasks.py
tests/fixtures/playwright-matrix-override/: README.md  package.json  playwright.config.ts  tasks.py
tests/fixtures/python-project/: README.md  pyproject.toml
tests/fixtures/python-project/src/mypkg/: __init__.py
tests/fixtures/python-project/tests/: test_core.py
tests/fixtures/python-version-matrix/: README.md  tasks.py
tests/fixtures/tauri-app/: .gitignore  .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  tasks.py  vitest.config.ts
tests/fixtures/tauri-app/python-sdk/: README.md  pyproject.toml
tests/fixtures/tauri-app/python-sdk/src/tauri_app_sdk/: __init__.py  client.py
tests/fixtures/tauri-app/python-sdk/tests/: test_client.py
tests/main/: test_argv.py  test_check.py  test_compose.py  test_dhall.py  test_discover.py  test_dispatch.py  test_effects.py  test_expression.py  test_format.py  test_github_matrix.py  test_init.py  test_mypyc.py  test_parser.py  test_pep723.py  test_tasks.py
tests/mcp/: conftest.py  test_catalog.py  test_docs.py  test_gate_cli.py  test_init_tool.py  test_lazy_import.py  test_result.py  test_scaffold.py  test_serve.py  test_version_check.py  test_wire.py
tests/plugin/: test_gate_e2e.py  test_shipped_plugin.py  test_templates.py
(+11 files in other folders)
