[project]
name = "camas"
description = "Generic parallel/sequential task runner"
readme = "README.md"
license = "MIT"
authors = [{ name = "JP Hutchins", email = "jphutchins@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
"exceptiongroup>=1.2,<2; python_version < '3.11'",
"taskgroup>=0.2,<1; python_version < '3.11'",
"tomli>=2,<3; python_version < '3.11'",
"typing_extensions>=4.12,<5; python_version < '3.11'",
]
dynamic = ["version"]
keywords = ["task-runner", "parallel", "sequential", "async"]
classifiers = [
"Development Status :: 3 - Alpha",
"Intended Audience :: Developers",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Programming Language :: Python :: 3.13",
"Programming Language :: Python :: 3.14",
"Programming Language :: Python :: 3.15",
"Topic :: Software Development :: Build Tools",
"Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/JPHutchins/camas"
Repository = "https://github.com/JPHutchins/camas"
Issues = "https://github.com/JPHutchins/camas/issues"

[project.scripts]
camas = "camas.main:main"

[build-system]
requires = [
"setuptools>=68",
"setuptools-scm>=8",
"mypy[mypyc]>=1.19",
"exceptiongroup>=1.2; python_version < '3.11'",
"taskgroup>=0.2; python_version < '3.11'",
"tomli>=2; python_version < '3.11'",
"typing_extensions>=4.12; python_version < '3.11'",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
camas = ["py.typed"]

[tool.setuptools_scm]

[dependency-groups]
dev = [
"mypy>=1.19,<2",
"pyright>=1.1.408,<2",
"pytest>=9,<10",
"pytest-cov>=7,<8",
"cyclopts>=4,<5",
"ruff>=0.12,<1",
"ty>=0.0.31,<1",
"zuban>=0.7,<1",
"pyrefly>=0.61,<1",
"types-setuptools",
"exceptiongroup>=1.2",
"taskgroup>=0.2",
"tomli>=2",
"typing_extensions>=4.12",
]

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
norecursedirs = ["fixtures"]
markers = ["slow: visual demo tests with real delays"]

[tool.ruff]
line-length = 100
exclude = ["tests/fixtures/"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
indent-style = "tab"

[tool.mypy]
strict = true
warn_unused_ignores = true
exclude = ["tests/fixtures/", "build/", "setup.py"]

[tool.pyright]
typeCheckingMode = "strict"
include = ["src", "tests"]
exclude = ["tests/fixtures/**"]

[tool.ty.src]
exclude = ["tests/fixtures/", "build/", "setup.py"]

[tool.pyrefly]
project-excludes = ["tests/fixtures/**", "build/**", "setup.py"]

[tool.coverage.run]
source = ["camas", "tests"]
branch = true
omit = ["tests/test_demos.py", "src/camas/__main__.py"]

[tool.coverage.report]
fail_under = 100
partial_branches = ["pragma: no branch", "case LeafInfo", "case Waiting"]
exclude_also = ["async for .* in proc\\.stdout"]
exclude_lines = [
"@overload",
"assert_never",
"case _:",
"pragma: no cover",
"if __name__ == .__main__.:",
"if TYPE_CHECKING",
':\s*\.\.\.\s*$',
'^\s*\.\.\.\s*$',
"raise AssertionError",
"@pytest.mark.slow",
"@app.command",
]
