[project]
name = "camas"
description = "Parallel and sequential task-tree runner with matrix expansion and effects plugins."
readme = "README.md"
license = "MIT"
authors = [{ name = "JP Hutchins", email = "jphutchins@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
"exceptiongroup>=1.2,<2; python_version < '3.11'",
"taskgroup>=0.2,<1; python_version < '3.11'",
"tomli>=2,<3; python_version < '3.11'",
"typing_extensions>=4.12,<5; python_version < '3.11'",
]
dynamic = ["version"]
keywords = [
"task-runner",
"parallel",
"sequential",
"async",
"github",
"agents",
"CI/CD",
]
classifiers = [
"Development Status :: 3 - Alpha",
"Intended Audience :: Developers",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Programming Language :: Python :: 3.13",
"Programming Language :: Python :: 3.14",
"Programming Language :: Python :: 3.15",
"Topic :: Software Development :: Build Tools",
"Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/JPHutchins/camas"
Repository = "https://github.com/JPHutchins/camas"
Issues = "https://github.com/JPHutchins/camas/issues"

[project.optional-dependencies]
github_checks = ["httpx>=0.28,<1"]
check = ["ty>=0.0.31,<1"]
all = ["httpx>=0.28,<1", "ty>=0.0.31,<1"]

[project.scripts]
camas = "camas.main:main"

[build-system]
requires = [
"setuptools>=68",
"setuptools-scm>=8",
"mypy[mypyc]>=1.19",
"exceptiongroup>=1.2; python_version < '3.11'",
"taskgroup>=0.2; python_version < '3.11'",
"tomli>=2; python_version < '3.11'",
"typing_extensions>=4.12; python_version < '3.11'",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
camas = ["py.typed"]

[tool.setuptools_scm]

[dependency-groups]
dev = [
"mypy>=1.19,<2",
"pyright>=1.1.408,<2",
"pytest>=9,<10",
"pytest-asyncio>=1,<2",
"pytest-cov>=7,<8",
"cyclopts>=4,<5",
"ruff>=0.12,<1",
"ty>=0.0.31,<1",
"zuban>=0.7,<1",
"pyrefly>=0.61,<1",
"types-setuptools",
"exceptiongroup>=1.2",
"taskgroup>=0.2",
"tomli>=2",
"typing_extensions>=4.12",
"httpx>=0.28,<1",
]

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
norecursedirs = ["fixtures", "examples"]
markers = ["slow: visual demo tests with real delays"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
exclude = ["tests/fixtures/"]

[tool.ruff.lint]
# preview is on solely to reach the DOC rules; explicit-preview-rules keeps
# every other preview rule out until selected by exact code. select (not
# extend-select) because preview also broadens ruff's default selection.
preview = true
explicit-preview-rules = true
select = [
"ASYNC", # flake8-async
"B", # flake8-bugbear
"C4", # flake8-comprehensions
"D", # pydocstyle
"DOC102", # pydoclint (preview): documented params that don't exist
"DOC202", # pydoclint (preview): documented returns that don't exist
"DOC403", # pydoclint (preview): documented yields that don't exist
"DOC501", # pydoclint (preview): raised exceptions must be documented
"DOC502", # pydoclint (preview): documented exceptions that aren't raised
"E", # pycodestyle errors
"F", # pyflakes
"FA", # flake8-future-annotations
"FLY", # flynt
"FURB", # refurb
"G", # flake8-logging-format
"I", # isort
"ICN", # flake8-import-conventions
"INP", # flake8-no-pep420
"ISC", # flake8-implicit-str-concat
"LOG", # flake8-logging
"N", # pep8-naming
"PERF", # perflint
"PGH", # pygrep-hooks
"PIE", # flake8-pie
"PL", # pylint
"PT", # flake8-pytest-style
"PTH", # flake8-use-pathlib
"PYI", # flake8-pyi
"RET", # flake8-return
"RSE", # flake8-raise
"RUF", # ruff-specific
"SIM", # flake8-simplify
"SLF", # flake8-self
"SLOT", # flake8-slots
"TC", # flake8-type-checking
"TRY", # tryceratops
"UP", # pyupgrade
"W", # pycodestyle warnings
"YTT", # flake8-2020
]
# DOC201/DOC402 (missing returns/yields sections) are deliberately absent:
# annotations are the single source of truth for parameter and return types,
# so docstrings document only what the type system cannot — raised exceptions.
ignore = [
# tab indentation + formatter conflicts
# (https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules)
"W191",
"E101",
"E111",
"E114",
"E117",
"D206",
"D300",
"ISC001",
"ISC002",
"E501", # the formatter owns line length; the rest is unbreakable doctest output
"D102", # effect methods implement the documented Effect protocol contract
"D103", # code should document itself; a needed comment is a symptom
"D105", # magic method contracts are defined by the data model, not prose
"D107", # __init__ is documented by its class
"D205", # summaries here are flowing paragraphs, not one-liners
"D417", # params belong to the type system, not prose (see DOC201/DOC402 above)
"PLC0415", # imports are scoped as narrowly as possible, by design
"PLR0911", # complexity thresholds reward fragmentation over clarity
"PLR0912",
"PLR0913",
"PLR0915",
"PLR2004", # renderer geometry is full of honest small numbers
"TRY003", # messages live in the raise; no exception-class zoo
"TRY004", # ValueError is the CLI's user-error channel (dispatch catches it)
]
allowed-confusables = ["×"] # matrix axes render as PY×6

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
# Options are immutable NamedTuples; constructing defaults in signatures is safe.
extend-immutable-calls = [
"camas.effect.github_checks.GitHubChecksOptions",
"camas.effect.status.StatusOptions",
"camas.effect.summary.SummaryOptions",
"camas.effect.termtree.TermtreeOptions",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"] # test functions document themselves by name

[tool.ruff.format]
indent-style = "tab"

[tool.mypy]
strict = true
warn_unused_ignores = true
exclude = ["tests/fixtures/", "examples/", "build/", "setup.py"]

[tool.pyright]
typeCheckingMode = "strict"
include = ["src", "tests"]
exclude = ["tests/fixtures/**", "examples/**"]

[tool.ty.src]
exclude = ["tests/fixtures/", "examples/", "build/", "setup.py"]

[tool.pyrefly]
project-excludes = [
"tests/fixtures/**",
"examples/**",
"build/**",
"setup.py",
".venv*/**",
]

[tool.coverage.run]
source = ["camas", "tests"]
branch = true
omit = ["tests/test_demos.py", "src/camas/__main__.py"]

[tool.coverage.report]
fail_under = 100
partial_branches = ["pragma: no branch", "case LeafInfo", "case Waiting"]
exclude_also = ["async for .* in proc\\.stdout"]
exclude_lines = [
"@overload",
"assert_never",
"case _:",
"pragma: no cover",
"if __name__ == .__main__.:",
"if TYPE_CHECKING",
':\s*\.\.\.\s*$',
'^\s*\.\.\.\s*$',
"raise AssertionError",
"@pytest.mark.slow",
"@app.command",
]
