[project]
name = "mypkg"
version = "0.1.0"
description = "Fixture project demonstrating camas tasks defined in pyproject.toml."
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["mypy", "pyright", "pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[tool.camas.tasks]
format = "ruff format ."
format_check = "ruff format --check ."
lint = "ruff check ."
lint_fix = "ruff check --fix ."
mypy = "mypy src tests"
pyright = "pyright src tests"
test = "pytest"
# Fluent syntax: a set literal becomes a Parallel.
typecheck = "{mypy, pyright}"
# Fluent syntax: a tuple literal becomes a Sequential.
fix = "(lint_fix, format)"
# Explicit Parallel/Sequential calls also work.
check = "Parallel(format_check, lint, typecheck, test)"
# Mixed: tuple-of-(tuple, set) → Sequential of (Sequential, Parallel).
all = "(fix, {typecheck, test})"
# Fluent with bare-string leaves (no name bindings) — strings inside fluent
# literals coerce to anonymous Task(cmd=...).
quick = "('ruff check .', {'mypy src tests', 'pytest'})"
build = '''
Parallel(
	Task("python -m build {FLAG}"),matrix={"FLAG": ("--sdist", "--wheel")})
'''
